# anila

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: distill-hard-sft-smoke.json  distill-soft-smoke.json  dpo-smoke.json  grpo_learned_reward_smoke.json  grpo_smoke.json  lora-sft-smoke.json  ppo_learned_reward_smoke.json  ppo_smoke.json  reward-model-smoke.json  sft-smoke.json  smoke.json
configs/benchmarks/: quickstart.json
configs/quickstart/: distill-hard-sft.json  distill-soft-pretrain.json  dpo.json  grpo-learned-reward.json  grpo-rule-reward.json  lora-sft.json  opd.json  ppo-learned-reward.json  ppo-rule-reward.json  pretrain-moe.json  pretrain.json  reward-model.json  sft.json
docs/: architecture.md  data-contracts.md  development.md  full-flow-quickstart.md  iteration-review.md  status.md
examples/: tiny_corpus.txt  tiny_opd_prompts.jsonl  tiny_ppo_prompts.jsonl  tiny_preferences.jsonl  tiny_reward_prompts.jsonl  tiny_sft.jsonl  tiny_tool_call_benchmark.jsonl
scripts/: quickstart-smoke.sh  verify.sh
src/anila/: __init__.py  __main__.py  _json.py  _version.py  benchmark.py  chat.py  checkpoint.py  cli.py  data.py  (+12 more)
tests/: test_benchmark.py  test_chat.py  test_checkpoint.py  test_checkpoint_manager.py  test_cli.py  test_config.py  test_data.py  test_distillation.py  test_dpo.py  test_evaluation.py  test_grpo.py  test_model.py  test_peft.py  test_ppo.py  test_reward.py  test_sampling.py  test_tokenization.py  test_training_aux_loss.py  test_training_integration.py  test_training_smoke.py
