[project]
name = "anila"
version = "0.1.9"
description = "A clean from-scratch language-model training repository."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Anila contributors" }]
keywords = ["language-model", "pytorch", "training", "transformer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26",
  "rich>=13.7",
  "tokenizers>=0.20",
  "torch>=2.10",
  "typer>=0.12",
]

[project.optional-dependencies]
artifacts = [
  "safetensors>=0.4",
]

[project.scripts]
anila = "anila.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.8",
  "safetensors>=0.4",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
